--- a/wubble/wubble_robots/controllers/erratic_controllers.yaml
+++ b/wubble/wubble_robots/controllers/erratic_controllers.yaml
@@ -1,8 +1,14 @@
-head_tilt_controller:
-    type: JointPositionController
-    joint: head_tilt_joint
-    pid:
-      p: 5.0
-      i: 0
-      d: 0
-      i_clamp: 0 
+head_traj_controller:
+  type: JointSplineTrajectoryController
+  joints: ['head_pan_joint', 'stoc_camera_joint']
+  gains:
+    head_pan_joint:
+      p: 10.0
+      i: 12.0
+      d: 0.5
+      i_clamp: 0.5 
+    stoc_camera_joint:
+      p: 12.4
+      i: 2.0
+      d: 0.4
+      i_clamp: 0.1 
