--- a/trunk/wubble/wubble_vision/CMakeLists.txt
+++ b/trunk/wubble/wubble_vision/CMakeLists.txt
@@ -29,3 +29,6 @@ rosbuild_genmsg()
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
 rosbuild_add_executable(single_color_tracking src/single_color_tracking.cpp)
+rosbuild_add_executable(single_color_tracking2 src/single_color_tracking2.cpp)
+#target_link_libraries(cvblobslib blob)
+rosbuild_add_executable(blobtracking src/blobtracking.cpp)
