Modified erratic model to have a base_footprint link like PR2, removed static tf publisher hack, switched to local diffdrive plugin which removes debug message and publishes correct transform, modified rviz files to work better, etc.

--- a/trunk/wubble/wubble_robots/controllers/erratic_controllers.yaml
+++ b/trunk/wubble/wubble_robots/controllers/erratic_controllers.yaml
@@ -1,13 +1,13 @@
 head_traj_controller:
   type: JointSplineTrajectoryController
-  joints: ['head_pan_joint', 'stoc_camera_joint']
+  joints: ['head_pan_joint', 'head_tilt_joint']
   gains:
     head_pan_joint:
       p: 10.0
       i: 12.0
       d: 0.5
       i_clamp: 0.5 
-    stoc_camera_joint:
+    head_tilt_joint:
       p: 12.4
       i: 2.0
       d: 0.4
