--- a/wubble/wubble_vision/CMakeLists.txt
+++ b/wubble/wubble_vision/CMakeLists.txt
@@ -28,8 +28,11 @@ rosbuild_genmsg()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
-rosbuild_add_library(blob src/cvBlobsLib/Blob.cpp src/cvBlobsLib/BlobResult.cpp src/cvBlobsLib/BlobExtraction.cpp)
-rosbuild_add_executable(single_color_tracking src/single_color_tracking.cpp)
+
+
+#rosbuild_add_library(blob src/cvBlobsLib/Blob.cpp src/cvBlobsLib/BlobResult.cpp src/cvBlobsLib/BlobExtraction.cpp)
+#rosbuild_add_executable(single_color_tracking src/single_color_tracking.cpp)
 #rosbuild_add_executable(single_color_tracking2 src/single_color_tracking2.cpp)
 #target_link_libraries(cvblobslib blob)
-rosbuild_add_executable(blobtracking src/blobtracking.cpp)
+#rosbuild_add_executable(blobtracking src/blobtracking.cpp)
+rosbuild_add_executable(histrack src/histogram_tracking.cpp)
