--- a/trunk/wubble/wubble_actions/CMakeLists.txt
+++ b/trunk/wubble/wubble_actions/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 2.4.6)
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
+#generate action messages
+rosbuild_find_ros_package(actionlib)
+include(${actionlib_PACKAGE_PATH}/cmake/actionbuild.cmake)
+genaction()
+
 # Set the build type.  Options are:
 #  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
 #  Debug          : w/ debug symbols, w/o optimization
