Let ros handle clean.

--- a/arrg/ua_vision/nmpt/Makefile
+++ b/arrg/ua_vision/nmpt/Makefile
@@ -4,27 +4,22 @@ all:build
 ZIP_FILE   = NMPT.zip
 ZIP_URL    = http://mplab.ucsd.edu/~nick/$(ZIP_FILE)
 SRC_DIR    = src
+LIB_DIR    = lib
 PKG_NAME   = nmpt
-SRC_PATH   = $(SRC_DIR)/$(PKG_NAME)
 
 include $(shell rospack find mk)/cmake.mk
 
 build:
-	if test -d $(SRC_DIR); \
+	if test -d $(LIB_DIR)/libnmpt.so; \
 	then \
 		echo "NMPT has already been installed."; \
 	else \
-		mkdir $(SRC_DIR); \
+		mkdir -p $(SRC_DIR); \
 		wget $(ZIP_URL); \
 		unzip $(ZIP_FILE); \
 		mv NMPT/src/*.h $(SRC_DIR); \
 		mv NMPT/src/*.cpp $(SRC_DIR); \
-		#rm $(ZIP_FILE); \
+		rm $(ZIP_FILE); \
 		rm -rf NMPT; \
 	fi
-        
-clean:
-	rm -rf $(SRC_DIR)
 
-wipe: clean
-	rm -rf build
