--- a/trunk/arrg/ua_vision/nmpt/Makefile
+++ b/trunk/arrg/ua_vision/nmpt/Makefile
@@ -5,7 +5,7 @@ ZIP_FILE   = NMPT.zip
 ZIP_URL    = http://mplab.ucsd.edu/~nick/$(ZIP_FILE)
 SRC_DIR    = src
 LIB_DIR    = lib
-PKG_NAME   = nmpt
+PATCH_FILE = nmptgcc4_4_1.patch
 
 include $(shell rospack find mk)/cmake.mk
 
@@ -19,6 +19,7 @@ build:
 		unzip $(ZIP_FILE); \
 		mv NMPT/src/*.h $(SRC_DIR); \
 		mv NMPT/src/*.cpp $(SRC_DIR); \
+		patch -b -p0 --verbose < $(PATCH_FILE); \
 		rm $(ZIP_FILE); \
 		rm -rf NMPT; \
 	fi
