--- a/trunk/arrg/ua_robots/wubble_description/controllers/erratic_controllers.yaml
+++ b/trunk/arrg/ua_robots/wubble_description/controllers/erratic_controllers.yaml
@@ -15,17 +15,18 @@ laser_tilt_controller:
   max_velocity:    100
   max_acceleration: 30
 
-head_traj_controller:
-  type: JointSplineTrajectoryController
-  joints: ['head_pan_joint', 'head_tilt_joint']
-  gains:
-    head_pan_joint:
-      p: 10.0
-      i: 12.0
-      d: 0.5
-      i_clamp: 0.5 
-    head_tilt_joint:
-      p: 12.4
-      i: 2.0
-      d: 0.4
-      i_clamp: 0.1 
+head_pan_controller:
+  type: JointPositionController
+  joint: head_pan_joint 
+  pid:
+    p: 100.0
+    i: 10.0
+    d: 50.0
+
+head_tilt_controller:
+  type: JointPositionController
+  joint: head_tilt_joint
+  pid:
+    p: 50.0
+    d: 30.0
+
