Added several build fixes, as well as a script that builds all the stacks at once, which is good for new installations and testing the build

--- a/arrg/ua_cognition/gbbopen/Makefile
+++ b/arrg/ua_cognition/gbbopen/Makefile
@@ -8,8 +8,9 @@ checkout: $(SVN_DIR)
 
 build: 
 	sh compile.sh
+	rm -rf asdf
 	mkdir asdf
-	ln -s `(rospack find gbbopen)`/gbbopen/gbbopen.asd asdf/gbbopen.asd	
+	ln -s `(rospack find gbbopen)`/gbbopen/gbbopen.asd asdf/gbbopen.asd 
 
 clean:
 	rm -rf patched rospack_nosubdirs gbbopen asdf
