--- a/trunk/arrg/ua_controllers/smart_arm_controller/launch/arm.yaml
+++ b/trunk/arrg/ua_controllers/smart_arm_controller/launch/arm.yaml
@@ -1,9 +1,19 @@
+# ROS params for smart_arm_controller
+# ALL references to left/right are with respect to the claw's perspective
 arm_controller:
   elbow_tilt_joint:
+    # set /arm_controller/elbow_tilt_joint/motor_ids to the list [5, 4]
+    # the list MUST be in the order [left_motor_id, right_motor_id]
     motor_ids: [5, 4]
+  # set /arm_controller/finger_left_joint/motor_id to the int 8
   finger_left_joint: {motor_id: 8}
+  # set /arm_controller/finger_right_joint/motor_id to the int 7
   finger_right_joint: {motor_id: 7}
+  # set /arm_controller/shoulder_pan_joint/motor_id to the int 1
   shoulder_pan_joint: {motor_id: 1}
   shoulder_tilt_joint:
+    # set /arm_controller/shoulder_tilt_joint/motor_ids to the list [2, 3]
+    # the list MUST be in the order [left_motor_id, right_motor_id]
     motor_ids: [2, 3]
+  # set /arm_controller/wrist_rotate_joint/motor_id to the int 6
   wrist_rotate_joint: {motor_id: 6}
