--- a/trunk/arrg/ua_vision/color_based_tracking/CMakeLists.txt
+++ b/trunk/arrg/ua_vision/color_based_tracking/CMakeLists.txt
@@ -34,8 +34,12 @@ rosbuild_genmsg()
 #rosbuild_add_executable(single_color_tracking src/single_color_tracking.cpp)
 #rosbuild_add_executable(single_color_tracking2 src/single_color_tracking2.cpp)
 #target_link_libraries(cvblobslib blob)
-#rosbuild_add_executable(blobtracking src/blobtracking.cpp)
+
 #rosbuild_add_executable(histrack src/histogram_tracking.cpp)
-#rosbuild_add_executable(camshift src/camshift.cpp)
 #rosbuild_add_executable(camshift2 src/camshift2.cpp)
-rosbuild_add_executable(camshift3 src/camshift3.cpp)
+#rosbuild_add_executable(camshift3 src/camshift3.cpp)
+#rosbuild_add_executable(camshift5 src/camshift5.cpp)
+#rosbuild_add_executable(histfind src/histogram_finder.cpp)
+#rosbuild_add_executable(blobtracking src/blobtracking.cpp)
+rosbuild_add_executable(hsv_camshift src/hsv_camshift.cpp)
+rosbuild_add_executable(rgb_camshift src/rgb_camshift.cpp)
