--- a/arrg/ua_robots/wubble_description/params/costmap_common_params.yaml
+++ b/arrg/ua_robots/wubble_description/params/costmap_common_params.yaml
@@ -1,14 +1,12 @@
-costmap:
-  transform_tolerance: 0.2
-  obstacle_range: 2.5
-  raytrace_range: 3.0
-  inflation_radius: 0.18
-  footprint: [[-0.11, -0.145], [-0.11, 0.145], [0.11, 0.145], [0.14, 0.0], [0.11, -0.145]]
+transform_tolerance: 0.2
+obstacle_range: 2.5
+raytrace_range: 3.0
+inflation_radius: 0.3
 
-  observation_sources: tilt_scan_shadow_filtered tilt_scan 
+observation_sources: tilt_scan_shadow_filtered tilt_scan
 
-  tilt_scan_shadow_filtered: {sensor_frame: laser_tilt_link, data_type: PointCloud, expected_update_rate: 0.2,
-    observation_persistence: 0.0, marking: true, clearing: false, min_obstacle_height: 0.08, max_obstacle_height: 2.0}
+tilt_scan_shadow_filtered: {sensor_frame: laser_link, data_type: PointCloud, topic: /tilt_scan_shadow_filtered, expected_update_rate: 0.2,
+  observation_persistence: 0.0, marking: true, clearing: false, min_obstacle_height: -0.10, max_obstalce_height: 2.0}
 
-  tilt_scan: {sensor_frame: laser_tilt_link, data_type: LaserScan, expected_update_rate: 0.2,
-    observation_persistence: 0.0, marking: false, clearing: true, min_obstacle_height: 0.08, max_obstacle_height: 2.0}
+tilt_scan: {sensor_frame: laser_link, data_type: LaserScan, topic: /tilt_laser/scan, expected_update_rate: 0.2, observation_persistence: 0.0, marking: false, clearing: true, min_obstacle_height: -0.10, max_obstalce_height: 2.0}
+
