--- a/trunk/arrg/ua_robots/wubble_description/params/costmap_common_params.yaml
+++ b/trunk/arrg/ua_robots/wubble_description/params/costmap_common_params.yaml
@@ -1,12 +1,12 @@
 transform_tolerance: 0.2
-obstacle_range: 2.5
-raytrace_range: 3.0
-inflation_radius: 0.3
+obstacle_range: 3.5
+raytrace_range: 4.0
+inflation_radius: 0.55
 
-observation_sources: tilt_scan_shadow_filtered tilt_scan
+observation_sources: tilt_scan tilt_scan_shadow_filtered tilt_scan_self_filtered
 
-tilt_scan_shadow_filtered: {sensor_frame: laser_link, data_type: PointCloud, topic: /tilt_scan_shadow_filtered, expected_update_rate: 0.2,
-  observation_persistence: 0.0, marking: true, clearing: false, min_obstacle_height: -0.10, max_obstalce_height: 2.0}
+tilt_scan: {sensor_frame: laser_link, data_type: LaserScan, topic: /tilt_laser/scan, expected_update_rate: 0.2, observation_persistence: 0.0, marking: false, clearing: true, min_obstacle_height: -0.08, max_obstacle_height: 2.0}
 
-tilt_scan: {sensor_frame: laser_link, data_type: LaserScan, topic: /tilt_laser/scan, expected_update_rate: 0.2, observation_persistence: 0.0, marking: false, clearing: true, min_obstacle_height: -0.10, max_obstalce_height: 2.0}
+tilt_scan_shadow_filtered: {sensor_frame: laser_link, data_type: PointCloud, topic: /tilt_scan_shadow_filtered, expected_update_rate: 0.2, observation_persistence: 0.0, marking: true, clearing: false, min_obstacle_height: -0.08, max_obstacle_height: 2.0}
 
+tilt_scan_self_filtered: {sensor_frame: laser_link, data_type: PointCloud, topic: /tilt_scan_self_filtered, expected_update_rate: 0.0, observation_persistence: 0.0, marking: true, clearing: false, min_obstacle_height: -0.08, max_obstacle_height: 2.0}
