--- a/trunk/arrg/ua_robots/wubble_description/params/local_costmap_params.yaml
+++ b/trunk/arrg/ua_robots/wubble_description/params/local_costmap_params.yaml
@@ -1,14 +1,14 @@
 #Independent settings for the local costmap
 local_costmap:
+  global_frame: /map
   publish_voxel_map: true
-  global_frame: map
   robot_base_frame: base_footprint
   update_frequency: 5.0
   publish_frequency: 2.0
   static_map: false
   rolling_window: true
-  width: 6.0
-  height: 6.0
-  resolution: 0.025
+  width: 8.0
+  height: 8.0
+  resolution: 0.05
   origin_x: 0.0
   origin_y: 0.0
