--- a/trunk/arrg/ua_robots/wubble_description/params/move_base_params.yaml
+++ b/trunk/arrg/ua_robots/wubble_description/params/move_base_params.yaml
@@ -1,6 +1,6 @@
-footprint: [[-0.21, -0.2], [-0.21, 0.2], [0.15, 0.2], [0.3, 0.0], [0.15, -0.2]]
+footprint: [[-0.23, -0.185], [-0.23, 0.185], [0.145, 0.185], [0.3, 0.03], [0.3, -0.03], [0.145, -0.185]]
 
 controller_frequency: 10.0
 controller_patience: 15.0
-clearing_radius: 0.35
-footprint_padding: 0.015
+clearing_radius: 0.59
+footprint_padding: 0.020
