--- a/trunk/arrg/ua_controllers/wubble_laser_tilt_controller/config/laser_controller.yaml
+++ b/trunk/arrg/ua_controllers/wubble_laser_tilt_controller/config/laser_controller.yaml
@@ -1,4 +1,8 @@
 laser_tilt_controller:
+    controller:
+        package: ax12_driver_core
+        module: joint_position_controller
+        type: JointPositionControllerAX12
     joint_name: hokuyo_tilt_joint
     motor:
         id: 7                       #9
