Added maximum joint speed to laser tilt and camera pan/tilt controllers

--- a/arrg/ua_controllers/wubble_laser_tilt_controller/config/laser_controller.yaml
+++ b/arrg/ua_controllers/wubble_laser_tilt_controller/config/laser_controller.yaml
@@ -4,6 +4,7 @@ laser_tilt_controller:
         module: joint_position_controller
         type: JointPositionControllerAX12
     joint_name: hokuyo_tilt_joint
+    joint_speed: 1.17
     motor:
         id: 7                       #9
         init: 817
