--- a/arrg/ua_controllers/wubble_camera_pan_tilt_controller/config/wubble_head.yaml
+++ b/arrg/ua_controllers/wubble_camera_pan_tilt_controller/config/wubble_head.yaml
@@ -4,6 +4,7 @@ head_pan_controller:
         module: joint_position_controller
         type: JointPositionControllerAX12
     joint_name: head_pan_joint
+    joint_speed: 1.17
     motor:
         id: 6
         init: 666
@@ -16,6 +17,7 @@ head_tilt_controller:
         module: joint_position_controller
         type: JointPositionControllerAX12
     joint_name: head_tilt_joint
+    joint_speed: 1.17
     motor:
         id: 5
         init: 514
