Forgot to add config file for arm controllers. Modify head and laser controllers to point to correct package.

--- a/arrg/ua_controllers/wubble_controllers/config/head_pan_tilt.yaml
+++ b/arrg/ua_controllers/wubble_controllers/config/head_pan_tilt.yaml
@@ -1,6 +1,6 @@
 head_pan_controller:
     controller:
-        package: ax12_driver_core
+        package: ax12_controller_core
         module: joint_position_controller
         type: JointPositionControllerAX12
     joint_name: head_pan_joint
@@ -13,7 +13,7 @@ head_pan_controller:
 
 head_tilt_controller:
     controller:
-        package: ax12_driver_core
+        package: ax12_controller_core
         module: joint_position_controller
         type: JointPositionControllerAX12
     joint_name: head_tilt_joint
