Apply patches from jksrecko. Thanks.

--- a/arrg/ua_drivers/videre_stoc/CMakeLists.txt
+++ b/arrg/ua_drivers/videre_stoc/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 
+link_directories(/usr/local/lib/SVS)
+
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 set(ROS_BUILD_TYPE Release)
 rosbuild_init ()
