Fixes for delete plugin, new erratic diffdrive plugin that is an actual plugin, support for adding and removing robot from simulation dynamically, script for stress testing Gazebo stability under add/delete. Lisp code is in transitional but working state.

--- a/arrg/ua_experimental/simulator_experiments/CMakeLists.txt
+++ b/arrg/ua_experimental/simulator_experiments/CMakeLists.txt
@@ -22,6 +22,10 @@ rosbuild_link_boost(add_object_plugin thread)
 rosbuild_add_library(world_state_publisher src/world_state_publisher.cpp)
 rosbuild_link_boost(world_state_publisher thread)
 
+rosbuild_add_library(diffdrive_plugin src/diffdrive_plugin.cpp)
+rosbuild_link_boost(diffdrive_plugin thread)
+
+
 # SIMULATION MANAGER (replacement for main.cc in Gazebo)
 
 rosbuild_add_executable(simulation_manager src/simulation_manager.cpp)
