Add saliency tracker to subtractor.

--- a/arrg/ua_vision/background_filters/CMakeLists.txt
+++ b/arrg/ua_vision/background_filters/CMakeLists.txt
@@ -23,4 +23,6 @@ rosbuild_add_executable(background_sampler src/background_sampler.cpp)
 rosbuild_add_executable(background_sub src/background_sub.cpp)
 rosbuild_add_executable(testing src/test.cpp)
 rosbuild_add_executable(rewrite_background_sampler src/background_sampler_rewrite.cpp)
+
 rosbuild_add_executable(rewrite_background_sub src/background_sub_rewrite.cpp)
+target_link_libraries(rewrite_background_sub nmpt)
