Add patch that fixrs a bug in OpenCVBoxFilter class. Scratch image was not initialized which was causing problems with dynamic reconfigure. Patch also disables normalization in FastSaliency, so that returned image is unnormalized log-likelihoods that we can use further.

--- a/arrg/ua_vision/nmpt/Makefile
+++ b/arrg/ua_vision/nmpt/Makefile
@@ -9,7 +9,8 @@ LIB_DIR     = lib
 BIN_DIR     = bin
 DATA_DIR    = data
 DOC_DIR     = doc
-PATCH_FILE  = nmpt_ros.patch
+PATCH_FILE1 = nmpt_ros.patch
+PATCH_FILE2 = nmpt_box_filter_bug.patch
 
 include $(shell rospack find mk)/cmake.mk
 
@@ -24,7 +25,8 @@ build:
 		mkdir -p $(DATA_DIR); \
 		wget $(ZIP_URL); \
 		unzip $(ZIP_FILE); \
-		patch -d NMPT -p1 --verbose < $(PATCH_FILE); \
+		patch -d NMPT -p1 --verbose < $(PATCH_FILE1); \
+		patch -d NMPT/src -p2 --verbose < $(PATCH_FILE2); \
 		mv NMPT/src/*.h $(INCLUDE_DIR)/nmpt; \
 		mv NMPT/src/*.cpp $(SRC_DIR)/nmpt; \
 		mv NMPT/doc/* $(DOC_DIR); \
