Added histogram display to common.h

--- a/arrg/ua_vision/background_filters/CMakeLists.txt
+++ b/arrg/ua_vision/background_filters/CMakeLists.txt
@@ -23,3 +23,6 @@ rosbuild_add_executable(overhead_filter src/overhead_filter.cpp)
 rosbuild_add_executable(background_averager src/background_averager.cpp)
 rosbuild_add_executable(background_subtractor src/background_subtractor.cpp)
 rosbuild_add_executable(object_tracker src/object_tracker.cpp)
+
+# BAD
+rosbuild_add_executable(background_sub_rewrite src/background_sub_rewrite.cpp)
