Add a few more params to synamic reconfigure. It looks like the camera is not returning the rectified images when st to DISPARITY or RECTIFIED modes.

--- a/arrg/ua_drivers/videre_stereo_cam/cfg/VidereStereoCam.cfg
+++ b/arrg/ua_drivers/videre_stereo_cam/cfg/VidereStereoCam.cfg
@@ -43,6 +43,16 @@ gen = ParameterGenerator()
 
 #       Name, Type, Reconfiguration level, Description, Default, Min, Max
 
+videre_mode = gen.enum([gen.const("PROC_MODE_NONE",          str_t, "none",          "Left raw + Right raw"),
+                        gen.const("PROC_MODE_RECTIFIED",     str_t, "rectified",     "Left rectified + Right rectified"),
+                        gen.const("PROC_MODE_DISPARITY_RAW", str_t, "disparity_raw", "Left raw + Disprity"),
+                        gen.const("PROC_MODE_DISPARITY",     str_t, "disparity",     "Left rectified + Disparity")],
+                        "Amount of processing done on camera.")
+
+gen.add("videre_mode",      str_t,  SensorLevels.RECONFIGURE_STOP, "Videre Mode", "none", edit_method = videre_mode)
+gen.add("calculate_points", bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate point cloud from disparity", True)
+gen.add("convert_to_color", bool_t, SensorLevels.RECONFIGURE_STOP, "Calculate color from Bayer pattern", True)
+
 gen.add("brightness_auto", bool_t, SensorLevels.RECONFIGURE_RUNNING, "Auto adjust brightness",       True)
 gen.add("brightness",      int_t,  SensorLevels.RECONFIGURE_RUNNING, "Brightness level if not auto", 50, 0, 255)
 gen.add("exposure_auto",   bool_t, SensorLevels.RECONFIGURE_RUNNING, "Auto adjust exposure",         True)
